[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "ffmpeg-python>=0.2.0",
    "flask>=3.1.1",
    "flask-cors>=6.0.0",
    "ollama>=0.4.8",
    "pandas>=2.2.3",
    "playwright>=1.52.0",
    "python-dotenv>=1.1.0",
    "pywinauto>=0.6.9",
    "requests>=2.32.3",
]
